--- a/css/main.css
+++ b/css/main.css
@@ -73,12 +73,16 @@ footer {
 
   #column-3 {
     background-color: #7FFFD4;
+    width: 100%;
   }
 
   footer {
     background-color: #F0FFFF;
   }
 
+  .col-3 {
+    width: 50%;
+  }
 }
 
 
@@ -98,10 +102,14 @@ footer {
 
   #column-3 {
     background-color: #008B8B;
+    width: 33.3%;
   }
 
   footer {
     background-color: #8B0000;
   }
 
+  .col-3 {
+    width: 33.3%;
+  }
 }
